Drop libav support, support real FFmpeg only
libav is an abandoned project and all remotely recent OSes (as far
back as Ubuntu 16.04) are using the real FFmpeg again.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -30,8 +30,8 @@ option('cdaudio', type: 'boolean', value: true,
        description: 'Whether CD audio support is enabled')
 option('console', type: 'boolean', value: true,
        description: 'Whether Game Music Emu support is enabled')
-option('ffaudio', type: 'combo', choices: ['ffmpeg', 'libav', 'disabled'],
-       description: 'Choose between ffmpeg, libav or disabled')
+option('ffaudio', type: 'boolean', value: true,
+       description: 'Whether FFmpeg support is enabled')
 option('flac', type: 'boolean', value: true,
        description: 'Whether FLAC support is enabled')
 option('modplug', type: 'boolean', value: true,
