--- a/src/meson.build
+++ b/src/meson.build
@@ -204,7 +204,7 @@ if have_cdaudio
   subdir('cdaudio')
 endif
 
-if get_option('ffaudio') in ['ffmpeg', 'libav']
+if get_option('ffaudio')
   subdir('ffaudio')
 endif
 
