skins-qt: Implement "Search and Select" dialog. Closes: #1138

--- a/src/skins-qt/meson.build
+++ b/src/skins-qt/meson.build
@@ -20,6 +20,7 @@ skins_qt_sources = [
   'playstatus.cc',
   'plugin.cc',
   'plugin-window.cc',
+  'search-select.cc',
   'skin.cc',
   'skin-ini.cc',
   'skins_cfg.cc',
