--- a/extra.mk.in
+++ b/extra.mk.in
@@ -67,6 +67,8 @@ NOTIFY_LIBS ?= @NOTIFY_LIBS@
 OPENMPT_CFLAGS ?= @OPENMPT_CFLAGS@
 OPENMPT_LIBS ?= @OPENMPT_LIBS@
 OSS_CFLAGS ?= @OSS_CFLAGS@
+PIPEWIRE_CFLAGS ?= @PIPEWIRE_CFLAGS@
+PIPEWIRE_LIBS ?= @PIPEWIRE_LIBS@
 SAMPLERATE_CFLAGS ?= @SAMPLERATE_CFLAGS@
 SAMPLERATE_LIBS ?= @SAMPLERATE_LIBS@
 SDL_CFLAGS ?= @SDL_CFLAGS@
