--- a/src/sndio/meson.build
+++ b/src/sndio/meson.build
@@ -1,4 +1,4 @@
-sndio_dep = cxx.find_library('sndio', required: false)
+sndio_dep = dependency('sndio', required: false)
 have_sndio = sndio_dep.found()
 
 
@@ -7,7 +7,6 @@ if have_sndio
     'sndio.cc',
     dependencies: [audacious_dep, sndio_dep],
     name_prefix: '',
-    link_args: ['-lsndio'],
     install: true,
     install_dir: output_plugin_dir
   )
