--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,12 +13,12 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: audacious-media-player/audacious
-        ref master-gtk3
+        ref: master-gtk3
         path: audacious
     - uses: actions/checkout@v3
       with:
         repository: audacious-media-player/audacious-plugins
-        ref master-gtk3
+        ref: master-gtk3
         path: audacious-plugins
     - name: dependencies
       run: sudo apt-get -qq update && sudo apt-get install libadplug-dev libasound2-dev libavformat-dev libbinio-dev libbs2b-dev libcddb2-dev libcdio-cdda-dev libcue-dev libcurl4-gnutls-dev libdbus-glib-1-dev libfaad-dev libflac-dev libfluidsynth-dev libgl1-mesa-dev libgtk-3-dev libjack-jackd2-dev liblircclient-dev libmms-dev libmodplug-dev libmp3lame-dev libmpg123-dev libneon27-gnutls-dev libnotify-dev libopenmpt-dev libpipewire-0.3-dev libpulse-dev libqt5opengl5-dev libqt5x11extras5-dev libsamplerate0-dev libsdl1.2-dev libsidplayfp-dev libsndfile1-dev libsndio-dev libsoxr-dev libvorbis-dev libwavpack-dev libxml2-dev qtbase5-dev qtmultimedia5-dev
