oss: Read lib dir from oss.conf

--- a/src/oss4/meson.build
+++ b/src/oss4/meson.build
@@ -1,8 +1,3 @@
-# XXX - Auto-detect this path from /etc/oss.conf
-oss_inc = '/usr/lib/oss/include'
-oss_inc_dirs = []
-
-
 oss_sources = [
   'oss.cc',
   'plugin.cc',
@@ -10,19 +5,21 @@ oss_sources = [
 ]
 
 
-if cxx.has_header('sys/soundcard.h', args: '-I' + oss_inc)
-  have_oss4 = true
-else
-  have_oss4 = false
+cmd = run_command('awk', '-F=', '/^OSSLIBDIR/{print $2}', '/etc/oss.conf', check: false)
+oss_lib_dir = cmd.returncode() == 0 ? cmd.stdout().strip() : '/usr/lib/oss'
+oss_inc_dir = oss_lib_dir / 'include'
+oss_inc_dirs = []
+
+cmd = run_command('test', '-d', oss_inc_dir, check: false)
+if cmd.returncode() == 0
+  oss_inc_dirs += oss_inc_dir
 endif
 
 
-if have_oss4
-  cmd = run_command('test', '-d', oss_inc, check: false)
-  if cmd.returncode() == 0
-    oss_inc_dirs += oss_inc
-  endif
+have_oss4 = cxx.has_header('sys/soundcard.h', args: '-I' + oss_inc_dir)
 
+
+if have_oss4
   shared_module('oss4',
     oss_sources,
     dependencies: [audacious_dep],
