--- a/extra.mk.in
+++ b/extra.mk.in
@@ -66,6 +66,8 @@ NOTIFY_CFLAGS ?= @NOTIFY_CFLAGS@
 NOTIFY_LIBS ?= @NOTIFY_LIBS@
 OPENMPT_CFLAGS ?= @OPENMPT_CFLAGS@
 OPENMPT_LIBS ?= @OPENMPT_LIBS@
+OPUS_CFLAGS ?= @OPUS_CFLAGS@
+OPUS_LIBS ?= @OPUS_LIBS@
 OSS_CFLAGS ?= @OSS_CFLAGS@
 PIPEWIRE_CFLAGS ?= @PIPEWIRE_CFLAGS@
 PIPEWIRE_LIBS ?= @PIPEWIRE_LIBS@
