Restore GTK3 support
- Make use of the new libaudgui helpers
- Use recent GTK3 APIs if possible
- Refactor some methods slightly to avoid duplicate code

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,6 +1,8 @@
 # GUI toolkits
 option('gtk', type: 'boolean', value: true,
        description: 'Whether GTK support is enabled')
+option('gtk3', type: 'boolean', value: false,
+       description: 'Whether GTK3 support is enabled')
 option('qt', type: 'boolean', value: true,
        description: 'Whether Qt support is enabled')
 option('qt6', type: 'boolean', value: false,
