--- a/src/aosd/Makefile
+++ b/src/aosd/Makefile
@@ -18,4 +18,4 @@ LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${X11EXT_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${X11EXT_LIBS} -lm
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${X11EXT_LIBS} -laudgui -lm
