--- a/src/statusicon/meson.build
+++ b/src/statusicon/meson.build
@@ -2,6 +2,7 @@ shared_module('statusicon',
   'statusicon.cc',
   dependencies: [audacious_dep, gtk_dep, audgui_dep],
   name_prefix: '',
+  cpp_args: '-Wno-deprecated-declarations',
   install: true,
   install_dir: general_plugin_dir
 )
