hotkey: Use correct dependency for GTK3 build

--- a/src/hotkey/meson.build
+++ b/src/hotkey/meson.build
@@ -1,4 +1,8 @@
-gdk_x11_dep = dependency('gdk-x11-2.0', version: gtk_req, required: false)
+if get_option('gtk3')
+  gdk_x11_dep = dependency('gdk-x11-3.0', version: gtk_req, required: false)
+else
+  gdk_x11_dep = dependency('gdk-x11-2.0', version: gtk_req, required: false)
+endif
 have_hotkey = gdk_x11_dep.found()
 
 
