qtaudio: Disable plugin if Qt 6 is used
It only compiles with Qt 5.

--- a/src/qtaudio/meson.build
+++ b/src/qtaudio/meson.build
@@ -1,5 +1,10 @@
 if get_option('qt6')
   qt_multimedia_dep = dependency('qt6', version: qt_req, required: false, modules: ['Multimedia'])
+
+  if qt_multimedia_dep.found()
+    warning('The Qt Multimedia output plugin is not yet compatible with Qt 6.')
+    qt_multimedia_dep = dependency('', required: false)
+  endif
 else
   qt_multimedia_dep = dependency('qt5', version: qt_req, required: false, modules: ['Multimedia'])
 endif
