Created abstraction for a frame-based (with samples for each channel) plugin and implemented it for background music engine.

--- a/src/background_music/Makefile
+++ b/src/background_music/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = background_music${PLUGIN_SUFFIX}
 
-SRCS = background_music.cc
+SRCS = background_music.cc FrameBasedPlugin.cc BackgroundMusicEngine.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
