--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,10 @@ AUD_COMMON_PROGS
 BUILDSYS_INIT
 BUILDSYS_SHARED_LIB
 
+if test $HAVE_DARWIN = yes ; then
+    BUILDSYS_FRAMEWORK([])
+fi
+
 dnl gettext
 dnl =======
 AM_GNU_GETTEXT([external])
