coreaudio: Fix linker errors with Autotools
Meson is somehow not affected, but be consistent anyway.

See also:
- https://stackoverflow.com/q/15884213
- https://stackoverflow.com/q/40940357

--- a/src/coreaudio/Makefile
+++ b/src/coreaudio/Makefile
@@ -10,4 +10,4 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 LD = ${CXX}
 CPPFLAGS += -I../..
 CXXFLAGS += ${PLUGIN_CFLAGS}
-LIBS += -lm -framework CoreAudio
+LIBS += -lm -framework AudioUnit -framework CoreAudio -framework Foundation
