mac-media-keys: Fix linker errors with Autotools
Meson is somehow not affected, but be consistent anyway.

--- a/src/mac-media-keys/Makefile
+++ b/src/mac-media-keys/Makefile
@@ -13,4 +13,4 @@ LD = ${OBJCXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
-LIBS += -framework AppKit
+LIBS += -framework AppKit -framework Carbon
