--- a/src/mac-media-keys/meson.build
+++ b/src/mac-media-keys/meson.build
@@ -10,7 +10,7 @@ shared_module('mac-media-keys',
   dependencies: [audacious_dep],
   name_prefix: '',
   objcpp_args: '-std=c++11',
-  link_args: ['-framework', 'AppKit'],
+  link_args: ['-framework', 'AppKit', '-framework', 'Carbon'],
   install: true,
   install_dir: general_plugin_dir
 )
