--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -14,4 +14,22 @@ runs:
   using: "composite"
   steps:
     - run: '$GITHUB_ACTION_PATH/install-dependencies.sh "${{ inputs.os }}" "${{ inputs.build-system }}"'
+      if: (!startsWith(inputs.os, 'windows'))
       shell: bash
+
+    - uses: msys2/setup-msys2@v2
+      if: startsWith(inputs.os, 'windows')
+      with:
+        msystem: MINGW32
+        update: true
+        install: >-
+          mingw-w64-i686-autotools mingw-w64-i686-faad2 mingw-w64-i686-ffmpeg
+          mingw-w64-i686-flac mingw-w64-i686-fluidsynth mingw-w64-i686-gcc
+          mingw-w64-i686-gtk2 mingw-w64-i686-lame mingw-w64-i686-libbs2b
+          mingw-w64-i686-libcdio-paranoia mingw-w64-i686-libcue
+          mingw-w64-i686-libmodplug mingw-w64-i686-libopenmpt
+          mingw-w64-i686-libsamplerate mingw-w64-i686-libsidplayfp
+          mingw-w64-i686-libsoxr mingw-w64-i686-libvorbis mingw-w64-i686-meson
+          mingw-w64-i686-mpg123 mingw-w64-i686-neon mingw-w64-i686-opusfile
+          mingw-w64-i686-pkg-config mingw-w64-i686-qt5-base mingw-w64-i686-SDL2
+          mingw-w64-i686-wavpack
