--- a/.github/actions/run-action/action.yml
+++ b/.github/actions/run-action/action.yml
@@ -17,4 +17,9 @@ runs:
   using: "composite"
   steps:
     - run: '$GITHUB_ACTION_PATH/run-action.sh "${{ inputs.action }}" "${{ inputs.os }}" "${{ inputs.build-system }}"'
+      if: (!startsWith(inputs.os, 'windows'))
       shell: bash
+
+    - run: '$GITHUB_ACTION_PATH/run-action.sh "${{ inputs.action }}" "${{ inputs.os }}" "${{ inputs.build-system }}"'
+      if: startsWith(inputs.os, 'windows')
+      shell: msys2 {0}
