--- a/src/filewriter/meson.build
+++ b/src/filewriter/meson.build
@@ -34,9 +34,13 @@ endif
 
 
 if get_option('filewriter-mp3')
-  lame_dep = cxx.find_library('mp3lame', required: false)
+  lame_dep = dependency('lame', required: false)
 
-  if lame_dep.found() and cxx.has_header('lame/lame.h')
+  if not lame_dep.found()
+    lame_dep = cxx.find_library('mp3lame', has_headers: 'lame/lame.h', required: false)
+  endif
+
+  if lame_dep.found()
     filewriter_deps += [lame_dep]
     filewriter_srcs += ['mp3.cc']
 
