meson: Improve library detection
- Try to detect via pkgconfig using `depandency()`
- Fallback to `cxx.find_library()` for library detection adding the `/usr/local/bin` path required by FreeBSD
- Remove unneeded `link_args: ['-llirc_client']`, required arguments provided by detection via `dependency()` or `cxx.find_library()`

--- a/src/aac/meson.build
+++ b/src/aac/meson.build
@@ -1,5 +1,10 @@
-faad_dep = cxx.find_library('faad', required: false)
-have_aac = faad_dep.found() and cxx.has_header('neaacdec.h')
+faad_dep = dependency('faad2', required: false)
+
+if not faad_dep.found()
+  faad_dep = cxx.find_library('faad', has_headers: 'neaacdec.h',
+                              dirs: ['/usr/local/lib'], required: false)
+endif
+have_aac = faad_dep.found()
 
 
 if have_aac
