Do not hardcode `dirs: ['/usr/local/lib']`.

--- a/src/aac/meson.build
+++ b/src/aac/meson.build
@@ -2,7 +2,7 @@ faad_dep = dependency('faad2', required: false)
 
 if not faad_dep.found()
   faad_dep = cxx.find_library('faad', has_headers: 'neaacdec.h',
-                              dirs: ['/usr/local/lib'], required: false)
+                              required: false)
 endif
 have_aac = faad_dep.found()
 
