qthotkey: Let Meson check for x11 instead of x11-xcb
'x11' is found on Ubuntu and requires 'xcb' and 'xproto'
in the pkgconfig file. This allows to build qthotkey in
our Ubuntu CI builds again.

Follow-up for commit cbbd7743f7.

--- a/src/qthotkey/meson.build
+++ b/src/qthotkey/meson.build
@@ -1,4 +1,5 @@
-x11_dep = dependency('x11-xcb', required: false)
+x11_dep = dependency('x11', required: false)
+
 if get_option('qt6')
   # QX11Application requires QtGui private headers and Qt >= 6.2
   qtx11_dep = dependency('qt6', version: [qt_req, '>= 6.2'], private_headers: true, required: false, modules: ['Core', 'Gui'])
